[package]
name = "nes"
version = "0.1.0"
authors = ["asdf <asdf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
ndarray = "0.15.2"
ndarray-rand = "0.14.0"
partial-min-max = "0.4.0"
rand = "0.8.3"
rayon = "1.5.1"
