[package]
name = "rust_es"
version = "0.1.0"
authors = ["asdf <asdf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-parallel = "0.9.1"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
partial-min-max = "0.4.0"
rand = "0.8.3"
rayon = "1.5.1"
